# qr-gen-cli

./: .gitignore  README.md  pyproject.toml
qr_gen_cli/: main.py
